# openDB

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE  README.md  docker-compose.yml  opendb-brandkit.html  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
app/: config.py  database.py  main.py  workspace.py
app/parsers/: docx.py  image.py  pdf.py  pptx.py  registry.py  spreadsheet.py  text.py
app/routers/: files.py  glob.py  health.py  index.py  memory.py  read.py  search.py
app/services/: grep_service.py  index_service.py  ingest_service.py  memory_service.py  read_service.py  search_service.py  watch_service.py
app/storage/: __init__.py  base.py  postgres.py  sqlite.py
app/utils/: hashing.py  text.py
benchmark/: .env.example  .gitignore  REPORT.md  benchmark.py  benchmark_results.json  competitor_bench.py  competitor_results.json  gen_distractors.py  gen_workspace.py  longmemeval_bench.py  longmemeval_e2e_bench.py  longmemeval_e2e_results.json  longmemeval_e2e_results_baseline_qwen.json  longmemeval_e2e_results_baseline_verify.json  longmemeval_e2e_results_extract.json  longmemeval_e2e_results_hybrid.json  longmemeval_e2e_results_hybrid2.json  longmemeval_e2e_results_mini_fixed.json  longmemeval_e2e_results_mini_improved.json  longmemeval_e2e_results_turnidx.json  longmemeval_results.json  memory_stress_bench.py  memory_stress_results.json  rag_index.py  run_all_scales.sh  run_scales.sh  scalability_bench.py  scalability_results.json
docs/: LOGO_DESIGN.md  architecture.md  python-library.md
docs/assets/: README.md
mcp_server/: __main__.py  client.py  models.py  server.py
musedb_core/: main.py  workspace.py
musedb_core/routers/: memory.py
musedb_core/services/: memory_service.py  read_service.py
musedb_core/storage/: base.py  postgres.py  sqlite.py
musedb_integration/: __init__.py  client.py  index.py  tools.py
opendb/: __init__.py  cli.py
opendb_core/: config.py  database.py  main.py  workspace.py  workspaces.py
opendb_integration/: __init__.py  client.py  index.py  tools.py
sql/: schema.sql
tests/: conftest.py  test_auth_middleware.py  test_classification.py  test_config.py  test_database.py  test_e2e.py  test_grep_service.py  test_hashing.py  test_index.py  test_ingest_service.py  test_parsers.py  test_read_structured.py  test_resolve_filename.py  test_sqlite_backend.py  test_tokenizer.py  test_utils.py  test_watch_service.py  test_workspaces.py
(+37 files in other folders)
